--- a/beer.html
+++ b/beer.html
@@ -52,7 +52,12 @@
 <!-- SECTION 1  -->
 <section class="BeerSec1">
  
+    <img class="winterhero" src="./images/winterblend.png"> 
+    <img class="whitehero" src="./images/white.png"> 
 
+
+    <h1 class="beerherotext"> unfilitered. <br> the way it <br> should be </h1>
+    
 </section> 
 
 
