adding product images

--- a/beer.html
+++ b/beer.html
@@ -60,6 +60,13 @@
     
 </section> 
 
+<!-- SECTION 2  -->
+<section class="BeerSec2"> 
+
+    <h2 class="sec2quote"> "They always have a great selection of ciders on tap and something that everyone will love."</h2>
+
+</section>
+
 
 
 </body>
