--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ font-family: 'Roboto', sans-serif; -->
 
         <!-- INFO -->
         <div class="text2">
-            <h2>
+            <h2 class="h2index">
                 OUR STORY
             </h2>
             
@@ -148,7 +148,7 @@ font-family: 'Roboto', sans-serif; -->
 
     <div class="sec3"> 
 
-        <h2 > CHOOSE YOUR FAVORITE FLAVOR </h2>
+        <h2 class="h2index"> CHOOSE YOUR FAVORITE FLAVOR </h2>
 
         <div> 
             <img class="listimg" src="./images/STARWBERRYLSIT.png"> 
@@ -171,7 +171,7 @@ font-family: 'Roboto', sans-serif; -->
 
     <div class="text4">
 
-        <h2>
+        <h2 class="h2index">
             OUR CIDER 
         </h2> 
 
