--- a/beer.html
+++ b/beer.html
@@ -68,6 +68,35 @@
 </section>
 
 
+<!-- SECTION 3  -->
+
+<section class="BeerSec3"> 
+
+    <h2 class="h2index">
+        DRINKS
+    </h2> 
+
+    <div> 
+        <img class="list1" src="./images/ORIGINALPRODUCT.png"> 
+        <img class="list1" src="./images/DOUBLEBLENDPRODUCT.png"> 
+        <img class="list1" src="./images/WHITEPRODUCT.png">
+
+    </div>
+    <!-- <div> 
+        <img class="list1" src="./images/BLACKBERRYPRODUCT.png"> 
+        <img class="list1" src="./images/STRAWBERRYPRODUCT.png"> 
+        <img class="list1" src="./images/PEARPRODUCT.png">
+
+    </div>
+    <div> 
+        <img class="list1" src="./images/MIMOSA.png"> 
+        <img class="list1" src="./images/PINAPPLECAN.png"> 
+       
+
+    </div> -->
+
+</section>
+
 
 </body>
 
