ugh positioning is annoying

--- a/beer.html
+++ b/beer.html
@@ -72,9 +72,11 @@
 
 <section class="BeerSec3"> 
 
-    <h2 class="h2index">
+    <div> 
+    <h2 >
         DRINKS
     </h2> 
+</div>
 
     <div> 
         <img class="list1" src="./images/ORIGINALPRODUCT.png"> 
