got the layout for product how i would like

--- a/beer.html
+++ b/beer.html
@@ -73,31 +73,64 @@
 <section class="BeerSec3"> 
 
     <div> 
-    <h2 >
-        DRINKS
-    </h2> 
-</div>
 
-    <div> 
+
+
+    <h2 class="h2index">DRINKS</h2> 
+
+    <div class=".BeerSec3Div"> 
         <img class="list1" src="./images/ORIGINALPRODUCT.png"> 
         <img class="list1" src="./images/DOUBLEBLENDPRODUCT.png"> 
         <img class="list1" src="./images/WHITEPRODUCT.png">
 
     </div>
-    <!-- <div> 
+
+    <div> 
         <img class="list1" src="./images/BLACKBERRYPRODUCT.png"> 
         <img class="list1" src="./images/STRAWBERRYPRODUCT.png"> 
         <img class="list1" src="./images/PEARPRODUCT.png">
 
     </div>
     <div> 
-        <img class="list1" src="./images/MIMOSA.png"> 
-        <img class="list1" src="./images/PINAPPLECAN.png"> 
+        <img class="list1" src="./images/MIMOSAPRODUCT.png"> 
+        <img class="list1" src="./images/PINAPPLEPRODUCT.png"> 
        
 
-    </div> -->
+    </div>
+
+
+
+
+</div>
+
+   
+</section>
+
+<!-- SECTION 4  -->
+<section class="BeerSec2"> 
+
+    <h2 class="sec2quote"> "Truly an amazing cider and an amazing experience.</h2>
 
 </section>
+
+
+<!-- FOOTER  -->
+<footer>
+
+
+    <img class="footerimg"src="./images/logowhite.png">
+
+  
+<div> 
+
+   <h3>256 Marginal St, Building 32 East Boston, MA 02128 </h3>
+
+</div>
+
+
+</footer>
+
+
 
 
 </body>
