--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ font-family: 'Roboto', sans-serif; -->
     <div>
 
         <h1 class="center">
-            UNFILTERED CRAFT CIDER
+            UNFILTERED CRAFT <br> CIDER
         </h1>
 
         
