fixing product page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ font-family: 'Roboto', sans-serif; -->
                 <ul>
 
                     <li> <a href="index.html"> home </a> </li>
-                    <li> <a href="beer.html"> beer </a></li>
+                    <li> <a href="beer.html"> cider </a></li>
                     <a href="index.html"> <img class="logoimg" src="images/logowhite.png"> </a>
 
                     <li> <a href="https://www.google.com/search?q=downeast+scider+hosue&rlz=1C5CHFA_enUS812US812&oq=downeast+scider+hosue+&aqs=chrome..69i57j0i13j46i13i175i199j46i13i199i465j0i13i457j0i13l5.4897j0j7&sourceid=chrome&ie=UTF"
@@ -80,7 +80,7 @@ font-family: 'Roboto', sans-serif; -->
         <div>
 
             <h1 class="center">
-                unfiltered craft <br> cider
+                unfiltered  craft  <br> cider
             </h1>
 
 
@@ -273,7 +273,7 @@ font-family: 'Roboto', sans-serif; -->
     <footer>
 
 
-        <div>
+        <div class="div">
 
             <div class="footerimg">
                 <img class="footerimg" src="./images/logowhite.png">
