fixing product again

--- a/beer.html
+++ b/beer.html
@@ -234,7 +234,7 @@
             <div class="parentcard">
                 <div class="cards">
                     <p> If you've ever done the clinking mimosas boomerang, this is your shot at redemption. Drink it
-                        without the theatrics, see what happens. Or do what you want. But don't.
+                        without the theatrics, see what happens. Or do what you want. 
 
 
 
@@ -247,7 +247,7 @@
                 </div>
 
                 <div class="cards">
-                    <p class="carddet"> boss said we can't call this unfiltered pineapple infused cider aloha friday. Refreshingly tart
+                    <p class="carddet"> Boss said we can't call this unfiltered pineapple infused cider aloha friday. Refreshingly tart
                         pineapple flavor from start to finish.
 
                     
